--- a/queue_task/public/index.html
+++ b/queue_task/public/index.html
@@ -8,7 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <title>Stack App</title>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Queue Task App</title>
 </head>
 
 <body>
